# mac-comment.py

./: README.md  requirements.txt  setup.cfg  setup.py
mac_comment/: __init__.py  __main__.py
tests/comment/examples/: cli.sh  example.py
