# https://pypi.org/project/setupcfg-generator/
[metadata]
name = mac-comment
version = 2019.3.22
url = https://github.com/looking-for-a-job/mac-comment.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = comment

[options]
install_requires = 
	click
	public
	setuptools
	xattr
packages = 
	mac_comment
